# clinical-drug-discovery

./: .env.example  .gitignore  .mcp.json  AUTOMATION.md  BATCHED_FORWARD_PASS_IMPLEMENTATION.md  BULK_LOADING_OPTIMIZATION.md  CLINICAL_ASSOCIATIONS.md  COMPLETE_WORKFLOW.md  CONTRASTIVE_LOSS_BUG_FIX.md  CONTRASTIVE_LOSS_FIXED.md  CRITICAL_BUG_FIX.md  CSV_BASED_GNN_IMPLEMENTATION.md  DAGSTER_SEQUENTIAL_EXECUTION.md  DISABLED_ASSETS.md  DISABLE_CONTRASTIVE_TEMP.md  DRUG_REPURPOSING_EXAMPLE.md  EMBEDDING_QUERY_GUIDE.md  EMBEDDING_VALIDATION.md  EXAMPLE_USAGE.md  GNN_MIGRATION.md  GRAPH_STYLE_GUIDE.md  HGT_EMBEDDING_COLLAPSE_REPORT.md  HGT_FIXES_IMPLEMENTED.md  HGT_FIXES_SUMMARY.md  MEMGRAPH_VS_CSV_ANALYSIS.md  MEMORY_ERROR_SOLUTION.md  MPS_BATCHED_TRAINING.md  MPS_COMPATIBILITY_FIX.md  MPS_OPTIMIZATION.md  MPS_OPTIMIZATIONS_APPLIED.md  MPS_OPTIMIZATION_TECHNIQUES.md  Makefile  NODE_FILTERING_IMPLEMENTATION.md  NODE_TYPE_ANALYSIS.md  PIPELINE_UPDATES.md  PREDICTION_RESULTS.md  QUICKSTART.md  QUICK_PIPELINE_TEST.md  README.md  SWITCH_TO_CPU.md  (+48 more)
.github/: copilot-instructions.md
docs/: BATCH_LOADING.md  DATABASE_SETUP.md  DRUG_DISCOVERY_PIPELINE.md  GRAPH_EMBEDDINGS.md  MLFLOW_TRACKING.md  PROGRESS_TRACKING.md  embeddings_visualization.md
scripts/: predict_for_disease.py  query_db.py  query_disease.sh  query_predictions.py  setup_postgres.py  setup_postgres.sh  visualize_embeddings.py
src/clinical_drug_discovery/lib/: __init__.py  clinical_extraction.py  data_loading.py  drug_discovery.py  gnn_cache.py  gnn_embeddings.py  gnn_hgt.py  gnn_hgt_batched.py  gnn_hgt_mps_optimized.py  gnn_optimization.py  gnn_sampling.py  gnn_simple.py  graph_embeddings.py  graph_enrichment.py  link_prediction.py  memory_efficient_sampling.py  model_training.py  name_matching.py  offlabel_data_loading.py  offlabel_inference.py  (+4 more)
src/dagster_definitions/: __init__.py  schedules.py  sensors.py
(+10 files in other folders)
