[project]
name = "clinical-drug-discovery"
version = "0.1.0"
description = "Clinical-enriched drug discovery using PrimeKG and clinical notes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.11.16",
    "dagster-postgres>=0.27.16",
    "dagster-webserver>=1.11.16",
    "mlflow>=3.5.1",
    "neo4j>=6.0.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "scispacy>=0.6.2",
    "spacy>=3.7.4,<3.8.0", # Compatible with en_ner_bc5cdr_md model
    "tqdm>=4.67.1",
    # Machine learning dependencies
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "node2vec>=0.4.6",
    "networkx>=3.1",
    "numpy>=1.24.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "plotly>=6.3.1",
    # PyTorch and GNN dependencies
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.dagster]
module_name = "dagster_definitions"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
